@@ -1,3 +1,12 @@
+2001-08-16  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* objs/egg.cc (Egg_object): Create random # of monsters, and find
+	free spots for them (which could be better, since it's not
+	checking their whole footprints, but I want to create a general
+	method for doing that).
+	* usecode/ucinternal.cc: SI crystal balls working again.
+	* usecode/intrinsics.cc: run_usecode() replaced by set_path_failure().
+	
 2001-08-15  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* actions.cc (If_else_path_actor_action): New action type.
